SERVER-20670 Remove pessimizing move from ShardRegistry

Triggers a warning with clang 3.7